# WaverFinance

./: .gitignore  README.md  license.md
docs/: Waver.drawio
src/contract/client/: Cargo.toml  build.sh
src/contract/client/neardev/: dev-account  dev-account.env
src/contract/client/scripts/: create_strategy.sh  env.sh  init.sh  oracle_failed.json  oracle_test.sh  view.sh
src/contract/client/src/: lib.rs  models.rs  util.rs
src/contract/meta/: Cargo.toml  build.sh  deploy.sh
src/contract/meta/neardev/: dev-account  dev-account.env
src/contract/meta/scripts/: create_contract.sh  env.sh  ft_transfer.sh  init.json  init.sh  oracle.json  oracle_test.sh  storage.sh  test_key.json  update_ft_config.sh  view.sh
src/contract/meta/src/: constants.rs  lib.rs  models.rs
src/dapp/: .gitignore  .hintrc  package-lock.json  package.json  react-near.json
src/dapp/abi/: mainContract.json
src/dapp/assets/svg/: BurgerIcon.jsx  CloseIcon.jsx
src/dapp/components/AddressId/: index.module.scss  index.tsx
src/dapp/configs/: near.ts
src/dapp/constants/: client.ts  gasFee.ts
src/dapp/hooks/: waver.ts
src/dapp/pages/: _app.tsx  create.module.scss  create.tsx  index.module.scss  index.tsx
src/dapp/public/: manifest.json
src/dapp/services/near/: ft.ts  (+5 more)
src/dapp/styles/: consts.scss  globals.scss
src/dapp/utils/: digital.ts  nearHelper.ts  signMultiTrxs.ts  string.ts
src/query/: charts.py  constants.py  db.py  explorer.py  failed.json  index.py  loop.py  loop_start.sh  loop_stop.sh  near.ini  parser.py  rpc.py  secret.py  start.sh  stop.sh  success.json  trade.py
(+69 files in other folders)
