[package]
name = "waver_meta"
version = "1.0.0"
authors = ["Henry <i@qaqrz.xyz>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/onehumanbeing/near-sdk-rs", tag = "v4.0.0-r"}
near-contract-standards = { git = "https://github.com/onehumanbeing/near-sdk-rs", tag = "v4.0.0-r" }
serde_json = "1.0"
near-units = "0.2.0"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true